Mobile validation changes

--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -38,36 +38,21 @@
                                     <span>Scancaf</span>
                                 </a>
                             </li>
-                        <li ui-sref-active="active">
-                                <a ui-sref="sourcebox" ng-click="vm.collapseNavbar()">
-                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
-                                    <span>Sourcebox</span>
-                                </a>
-                            </li>
-                        <li ui-sref-active="active">
-                                <a ui-sref="boxassign" ng-click="vm.collapseNavbar()">
-                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
-                                    <span>Boxassign</span>
-                                </a>
-                            </li>
-                        <li ui-sref-active="active">
+                       
+                       
+                      <!--   <li ui-sref-active="active">
                                 <a ui-sref="suspendedusers" ng-click="vm.collapseNavbar()">
                                     <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
                                     <span>Suspendedusers</span>
                                 </a>
-                            </li>
+                            </li> -->
                       <!--   <li ui-sref-active="active">
                                 <a ui-sref="adminstats" ng-click="vm.collapseNavbar()">
                                     <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
                                     <span>Adminstats</span>
                                 </a>
                             </li> -->
-                        <li ui-sref-active="active">
-                                <a ui-sref="system" ng-click="vm.collapseNavbar()">
-                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
-                                    <span>System</span>
-                                </a>
-                            </li>
+                       
                         <li ui-sref-active="active">
                                 <a ui-sref="mobile-validation" ng-click="vm.collapseNavbar()">
                                     <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
@@ -142,12 +127,30 @@
                                 <span>Metrics</span>
                             </a>
                         </li>
-                        <li ui-sref-active="active">
+                         <li ui-sref-active="active">
+                                <a ui-sref="boxassign" ng-click="vm.collapseNavbar()">
+                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                    <span>Boxassign</span>
+                                </a>
+                            </li>
+                             <li ui-sref-active="active">
+                                <a ui-sref="system" ng-click="vm.collapseNavbar()">
+                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                    <span>System</span>
+                                </a>
+                            </li>
+                             <li ui-sref-active="active">
+                                <a ui-sref="sourcebox" ng-click="vm.collapseNavbar()">
+                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                    <span>Sourcebox</span>
+                                </a>
+                            </li>
+                       <!--  <li ui-sref-active="active">
                             <a ui-sref="jhi-health" ng-click="vm.collapseNavbar()">
                                 <span class="glyphicon glyphicon-heart"></span>&nbsp;
                                 <span>Health</span>
                             </a>
-                        </li>
+                        </li> 
                         <li ui-sref-active="active">
                             <a ui-sref="jhi-configuration" ng-click="vm.collapseNavbar()">
                                 <span class="glyphicon glyphicon-list-alt"></span>&nbsp;
@@ -171,7 +174,7 @@
                                 <span class="glyphicon glyphicon-book"></span>&nbsp;
                                 <span>API</span>
                             </a>
-                        </li>
+                        </li> -->
                         <li ui-sref-active="active">
                             <a ui-sref="elasticsearch-reindex" ng-click="vm.collapseNavbar()">
                                 <span class="glyphicon glyphicon-exclamation-sign"></span>&nbsp;
