--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -200,9 +200,9 @@ ul#strengthBar {
     vertical-align:2px;
 }
 
-.point:last {
+/*.point:last {
     margin:0 !important;
-}
+}*/
 .point {
     background:#DDD;
     border-radius:2px;
