user change and final changes included

--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -53,10 +53,17 @@
                                 </a>
                             </li> -->
                        
-                        <li ui-sref-active="active">
+                     <!--    <li ui-sref-active="active">
                                 <a ui-sref="mobile-validation" ng-click="vm.collapseNavbar()">
                                     <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
                                     <span>Mobile Validation</span>
+                                </a>
+                            </li> -->
+                       
+                        <li ui-sref-active="active">
+                                <a ui-sref="secondsegregation" ng-click="vm.collapseNavbar()">
+                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                    <span>Secondsegregation</span>
                                 </a>
                             </li>
                        
@@ -127,22 +134,28 @@
                                 <span>Metrics</span>
                             </a>
                         </li>
-                         <li ui-sref-active="active">
+                            <!--  <li ui-sref-active="active">
+                                <a ui-sref="system" ng-click="vm.collapseNavbar()">
+                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                    <span>System</span>
+                                </a>
+                            </li> -->
+                             <li ui-sref-active="active">
+                                <a ui-sref="sourcebox" ng-click="vm.collapseNavbar()">
+                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
+                                    <span>Sourcebox</span>
+                                </a>
+                            </li>
+                             <li ui-sref-active="active">
                                 <a ui-sref="boxassign" ng-click="vm.collapseNavbar()">
                                     <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
                                     <span>Boxassign</span>
                                 </a>
                             </li>
                              <li ui-sref-active="active">
-                                <a ui-sref="system" ng-click="vm.collapseNavbar()">
+                                <a ui-sref="userchange" ng-click="vm.collapseNavbar()">
                                     <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
-                                    <span>System</span>
-                                </a>
-                            </li>
-                             <li ui-sref-active="active">
-                                <a ui-sref="sourcebox" ng-click="vm.collapseNavbar()">
-                                    <span class="glyphicon glyphicon-asterisk"></span>&nbsp;
-                                    <span>Sourcebox</span>
+                                    <span>Userchange</span>
                                 </a>
                             </li>
                        <!--  <li ui-sref-active="active">
