--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -392,6 +392,16 @@ logo_centre{
 	padding-top:20px;
 	}
 
+.box_trans{
+	
+	position: relative;
+	width:600px;
+	height:75px;
+	background-color:#d6d3d3;
+	z-index:-1;
+	
+	
+}
 
 
 /* jhipster-needle-css-add-main JHipster will add new css style */
